[package]
name = "rust-wasm-code"
version = "0.1.0"
edition = "2021"

[lib]
name = "exports"
path = "src/exports.rs"
crate-type = ["cdylib"]

[[bin]]
name = "keygen"
path = "src/main.rs"
#required-features = ["seeder"]

[features]
#seeder = ["tfhe/seeder_x86_64_rdseed"]
default = []

[dependencies]
sha2 = "0.10.7"
tfhe = { path = "../../tfhe-rs/tfhe", features = ["boolean", "integer", "shortint", "custom_seeder"] }
concrete-csprng = "0.3.0"
hex = "0.4.3"
bincode2 = "2.0.1"